--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,8 +17,10 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
+    "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.0",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
+    "info.jacobingalls.jamkit": "https://github.com/Jacobingalls/JamKit.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
